<?xml version="1.0" encoding="utf-8"?>
	<resources>
	    
    <!-- Generales -->
    <string name="app_name">TravelJoin</string>
<!--     <string name="api_url">http://192.168.1.133:3001</string> -->
    <string name="api_url">http://travel-join-api.herokuapp.com</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="append_required">" es requerido"</string>
    <string name="create">Crear</string>
    <string name="edit">Editar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Borrar</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>   
    <string name="ok">Aceptar</string>
    <string name="loading">Cargando</string>
    <string name="wait">Por favor espere...</string>
    <!-- FIN Generales -->
	
    <!-- Menu -->
    <string name="profile">Mi perfil</string>
    <string name="pois">Puntos de interés</string>
    <string name="tours">Circuitos turísticos</string>
    <string name="groups">Grupos</string>
    <string name="augmented_reality">Realidad Aumentada</string>
    <string name="help">Ayuda</string>
    <!-- FIN Menu -->
    
    <!-- Map -->
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado. Por favor, re-conectarse.</string>
    <!-- FIN Map -->
    
    <!-- Map filters -->
    <string name="categories_filter">Categorías</string>
    <string name="groups_filter">Grupos</string>
    <!-- FIN Map filters -->
    
    <!-- Subtitulos  -->
    <string name="map_filter">Filtros del mapa</string>
    <string name="group_view">Detalle de grupo</string>
    <string name="groups_creation">Nuevo grupo</string>
    <string name="groups_edition">Editar grupo</string>
    <string name="pois_selector">Selección de puntos de interés</string>
    <string name="tours_selector">Selección de circuitos</string>
    <string name="interests_selector">Selección de intereses</string>
    <string name="pois_view">Detalle de punto de interés</string>
    <string name="pois_creation">Nuevo punto de interés</string>
    <string name="pois_edition">Editar punto de interés</string>
    <string name="tours_view">Detalle de circuito</string>
    <string name="tours_creation">Nuevo circuito</string>
    <string name="tours_edition">Editar circuito</string>
	<!-- FIN Sutitulos  -->
	
	<!-- Actions -->
	<string name="action_logout">Cerrar sesión</string>
    <string name="action_settings">Configuraciones</string>
    <string name="action_search">Buscar</string>
	<string name="action_create">Crear</string>
	<string name="action_add">Agregar</string>
	<string name="action_filter">Filtrar</string>
	<string name="action_help">Ayuda</string>
    <string name="search_hint">Buscar en la lista</string>
    <string name="explore_button">Explorar!</string>
    <string name="join_group">Unirse al grupo</string>
    <string name="disjoin_group">Dejar el grupo</string>
    <string name="view_suggestions">Ver sugerencias</string>
    <!-- FIN Actions -->
    
    <!-- POIs -->    
    <string name="edit_poi">Editar punto</string>
    <string name="delete_poi">Borrar punto</string>
    <string name="delete_poi_message">¿Está seguro de que desea borrar este punto?</string>
    <string name="delete_poi_error_message">No se ha podido borrar el punto correctamente.</string>
    <string name="rank_poi">Calificar punto</string>
    <string name="denounce_poi">Denunciar punto</string>
    <string name="description">Descripción</string>
    <string name="name">Nombre</string>
    <string name="poi_form_description">Ingrese los datos del punto de interés:</string>
    <string name="poi_categories">Categoría</string>
    <string name="address">Dirección</string>
    <string-array name="distances_for_filters">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    
    <string name="poi_added_to_favorites_message">El punto fue agregado a sus favoritos correctamente.</string>
	<string name="poi_removed_from_favorites_message">El punto fue borrado de sus favoritos correctamente.</string>
	<string name="poi_already_in_favorites_message">Usted ya ha agregado este punto a sus favoritos.</string>    
	<string name="poi_already_removed_from_favorites_message">Usted ya ha borrado este punto de sus favoritos.</string>
	<string name="poi_ranked_ok_message">El punto fue calificado correctamente.</string>
    <string name="poi_denounced_ok_message">El punto fue denunciado correctamente.</string>
    <string name="poi_suggested_ok_message">El punto fue sugerido correctamente.</string>
    
    <!-- FIN pois -->

    <!-- events -->
    <string name="events">Eventos</string>
    <string name="delete_poi_event_error_message">No se ha podido borrar el evento correctamente.</string>
    <string name="event_form_description">Ingrese los datos del evento:</string>
    <string name="select_date_time_start">Fecha y hora de inicio</string>
    <string name="select_date_time_end">Fecha y hora de fin</string>
    <string name="date_time_picker_message">Seleccione el día y la hora del evento</string>
    <string name="date_time_picker_start_message">Seleccione el día y la hora de inicio del evento</string>
    <string name="date_time_picker_end_message">Seleccione el día y la hora de fin del evento</string>
    <!-- FIN events -->
    
    <!-- Tours -->
    <string name="tour_form_description">Ingrese los datos del circuito:</string>
    <string name="delete_tour">Borrar circuito</string>
    <string name="delete_tour_message">¿Está seguro de que desea borrar este circuito?</string>
    <string name="delete_tour_error_message">No se ha podido borrar el circuito correctamente.</string>
    <string name="rank_tour">Calificar circuito</string>
    <string name="tour_general_information_tab">General</string>
    <string name="tour_pois_tab">Puntos de interés</string>
    
    <string name="tour_added_to_favorites_message">El circuito fue agregado a sus favoritos correctamente.</string>
	<string name="tour_removed_from_favorites_message">El circuito fue borrado de sus favoritos correctamente.</string>
	<string name="tour_already_in_favorites_message">Usted ya ha agregado este circuito a sus favoritos.</string>    
	<string name="tour_already_removed_from_favorites_message">Usted ya ha borrado este circuito de sus favoritos.</string>
	<string name="tour_ranked_ok_message">El circuito fue calificado correctamente.</string>
	<string name="tour_suggested_ok_message">El circuito fue sugerido correctamente.</string>
    <!-- FIN tours -->
	
	<!-- Groups -->
    <string name="group_form_description">Ingrese los datos del grupo:</string>
    <string name="group_general_information_tab">General</string>
    <string name="group_pois_tab">Puntos de interés</string>
    <string name="group_tours_tab">Circuitos</string> 
    <string name="group_interests_tab">Intereses</string>
    <string name="group_members_tab">Miembros</string>
    <string name="group_suggestions_tab">Sugerencias</string>
    <string name="radio_public_group">Público</string>
    <string name="radio_private_group">Privado</string>
    <string name="group_password">Contraseña</string>
    <string name="main_group_form_inputs">Información principal</string>
    <string name="group_type">Tipo de grupo</string>
    <string name="delete_group">Borrar grupo</string>
    <string name="delete_group_message">¿Está seguro de que desea borrar este grupo?</string>
    <string name="delete_group_error_message">No se ha podido borrar el grupo correctamente.</string>
    <string name="group_public">Público</string>
    <string name="group_private">Privado</string>
    <string name="private_group_dialog_title">Grupo privado</string>
    <string name="private_group_hint">Se requiere la contraseña de acceso:</string>
    <string name="private_group_insert_password">Ingrese la contraseña</string>
    <string name="invalid_private_group_password">Contraseña inválida. No se pudo unir al grupo.</string>
    <string name="group_joined_message">Se ha unido al grupo correctamente.</string>
    <string name="group_already_joined_message">Usted ya pertenece a este grupo.</string>
    <string name="group_disjoined_message">Ha dejado el grupo correctamente.</string>
    <string name="group_already_disjoined_message">Usted ya no pertenece a este grupo.</string>
    <string name="suggestion_accepted">Sugerencia aceptada.</string>
    <string name="suggestion_rejected">Sugerencia rechazada.</string>
    <!-- FIN groups -->
    
    <!-- Login -->
    <string name="facebook_app_id">1509535099283633</string>
    <string name="facebook_get_started">Para comenzar, iniciar sesion con Facebook</string>
    <string name="fetching_user_error">No se ha podido obtener el usuario.</string>
    <!-- FIN Login -->
	
	<!-- General item list -->
    <string name="item_list_image_description">Imagen del elemento</string>
    <!-- FIN events -->
    
    <!-- User profile -->
    <string name="general_user_profile_tab">General</string>
    <string name="groups_user_profile_tab">Grupos</string>
    <string name="pois_user_profile_tab">Puntos de interés</string>
    <string name="tours_user_profile_tab">Circuitos</string>
    <string name="own_pois_group">Puntos de interés propios</string>
    <string name="favourite_pois_group">Puntos de interés favoritos</string>
    <string name="own_tours_group">Circuitos propios</string>
    <string name="favourite_tours_group">Circuitos favoritos</string>
    <string name="own_groups_group">Grupos propios</string>
    <string name="joined_groups_group">Grupos a los que pertenece</string>
    <string name="own_groups">Como administrador: </string>
    <string name="joined_groups">Como miembro: </string>
    <string name="own_pois">Como administrador: </string>
    <string name="favorite_pois">Favoritos: </string>
    <string name="own_tours">Como administrador: </string>
    <string name="favorite_tours">Favoritos: </string>
    <!-- FIN User Profile -->
    
    <!-- General item list context menu -->
    <string name="conext_menu_view">Ver</string>
    <string name="conext_menu_edit">Editar</string>
    <string name="conext_menu_delete">Eliminar</string>
    <!-- FIN General item list context menu -->
    
    <string name="title_activity_filter_pois">Filtrar</string>
	
    <!-- General item list context menu -->
    <string name="context_menu_view">Ver</string>
    <string name="context_menu_edit">Editar</string>
    <string name="context_menu_delete">Eliminar</string>
    <!-- FIN General item list context menu -->
    
    <!-- Group item list context menu -->
	<string name="group_context_menu_join">Unirse al grupo</string>
	<string name="group_context_menu_disjoin">Dejar el grupo</string>    
    <!-- FIN Group item list context menu -->
    
    <!-- Augmented reality -->
	<string name="finding_location">Encontrando ubicación</string>
    <!-- FIN Augmented reality -->
    
    <!-- Exception mesaages -->
	<string name="retry_message">"Intente de nuevo"</string>
	<string name="error_message">"Error"</string>
	<string name="connection_error_message">Ha ocurrido un problema con la conexión a los servidores. Por favor, intente de nuevo.</string>			
    <!-- FIN Exception mesaages -->
    
</resources>