<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewPoiAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">
	    
    <LinearLayout android:id="@+id/layoutPoiForm"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    tools:context="com.example.traveljoin.activities.PoiFormActivity">
	
	
        <!-- descripcion del formulario -->

        <TextView
            android:id="@+id/FormDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poi_form_description"
            android:textSize="10pt" >
        </TextView>

        <!-- latitud(invisible al usuario) -->

        <TextView
            android:id="@+id/PoiLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone" >
        </TextView>

        <!-- longitud(invisible al usuario) -->

        <TextView
            android:id="@+id/PoiLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone" >
        </TextView>

        <!-- nombre -->

        <EditText
            android:id="@+id/PoiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine" >
        </EditText>

        <!-- descripcion -->

        <EditText
            android:id="@+id/PoiDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textCapSentences|textAutoCorrect" >
        </EditText>
        
        <EditText
            android:id="@+id/PoiAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textCapSentences" >
        </EditText>

        <!-- spinner(select) de categorias -->
        
        <Spinner
            android:id="@+id/PoiCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/poi_categories" />			        	         	   	 
	   	
    </LinearLayout>
</ScrollView>               