<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Bottom button section -->

    <LinearLayout
        android:id="@+id/LinearLayourTourForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/TourCancelButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_cancel"
                android:onClick="cancel"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/TourCreateButton"
                style="?android:buttonBarButtonStyle"
                android:drawableLeft="@drawable/ic_action_accept"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="createTour"
	            android:text="@string/create"
	            android:visibility="gone"/>
            
       		<Button
                android:id="@+id/TourUpdateButton"
                style="?android:buttonBarButtonStyle"
                android:drawableLeft="@drawable/ic_action_accept"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="updateTour"
	            android:text="@string/update"
	            android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
    <!-- End - Bottom button section -->

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TourPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons"
        android:fillViewport="true" />

</RelativeLayout>