<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollViewPoiDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >
      
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_blue_light" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/poiEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" >
        </TextView>

        <!-- descripcion -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:text="@string/description"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_blue_light" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/poiEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" >
        </TextView>

        <!-- fecha y hora inicio -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:text="@string/select_date_time_start"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_blue_light" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/poiEventTimeStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" >
        </TextView>
        
        <!-- fecha y hora fin -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:text="@string/select_date_time_end"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_blue_light" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/poiEventTimeEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" >
        </TextView>

                  
        
    </LinearLayout>

</ScrollView>